style.css
/* ... */
.create-room {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding: 8px 5px;
  border: 1px solid var(--primary-blue);
  border-radius: 20px;
  width: 120px;
  font-size: 12px;
  color: var(--primary-blue);
}
.online-user-container {
  position: absolute;
  z-index: 0;
  display: flex;
  right: -23px;
}
.online-user-container img {
  width: 35px;
  height: 35px;
  border-radius: 50%;
  margin: auto 5px;
}
.scroll-right {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background-color: var(--soft-dark);
  color: var(--text-color);
  position: absolute;
  z-index: 2;
  right: 10px;
  bottom: 4px;
  display: flex;
  justify-content: center;
  align-items: center;
}
/* Posts */
.post-container {
  width: 607px;
  margin: auto;
  border-radius: 10px;
  background-color: var(--semi-dark);
  margin-top: 17px;
  color: var(--text-color);
}
.profile-and-options {
  display: flex;
  justify-content: space-between;
  padding: 15px 15px 0px 15px;
}
.profile {
  display: flex;
  justify-content: flex-start;
}
.name {
  font-size: 13px;
  display: block;
}

.profile img {
  width: 35px;
  height: 35px;
  border-radius: 50%;
  margin-right: 10px;
}
.time {
  font-size: 10px !important;
}
.options {
  width: 32px;
  height: 32px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: 0.5s;
}
.options:hover {
  background-color: var(--soft-dark);
}

.content {
  display: block;
  padding: 8px 0px;
  font-size: 13px;
}
.content img {
  width: 100%;
  margin: auto;
}
.article {
  margin-bottom: 7px;
  padding: 15px;
}
.actions {
  display: flex;
  justify-content: space-between;
  padding: 0px 15px 5px 15px;
}
.reactions {
  display: flex;
  align-items: flex-start;
}
.react img {
  margin-right: -4px;
  height: 14px;
}
.reactions p {
  margin-left: 5px;
  padding: 0px 2px;
  display: inline-block;
  font-size: 13px;
}
.comments-shares {
  font-size: 13px;
}
.padding-15 {
  margin: 0px 15px 0px 15px;
}
.user-actions {
  display: flex;
  padding: 5px 15px;
}
.user-actions-icons {
  width: 33.33%;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 7px 0px;
}
.user-actions-icons i {
  color: var(--text-color-white);
  font-size: 15px;
  margin-right: 5px;
}
.user-actions-icons:hover {
  background-color: var(--soft-dark);
  border-radius: 10px;
}
/* Right Side */
.right-side {
  width: 20%;
  display: flex;
  flex-direction: column;
  position: fixed;
  right: 3px;
  padding: 20px;
  color: var(--text-color);
}

.contacts {
  width: 100%;
  display: flex;
  flex-direction: column;
}
.contact-heading {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.find-contact {
  display: flex;
  justify-content: flex-end;
}
.contact-options-icon-container {
  width: 30px;
  height: 30px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.contact-options-icon-container:hover {
  background-color: var(--soft-dark);
}
.contact-options-icon {
  font-size: 16px;
}
.contact {
  display: flex;
  justify-content: flex-start;
  padding: 10px 15px;
  align-items: center;
}
.contact-img {
  width: 30px;
  height: 30px;
  border-radius: 50%;
  margin-right: 10px;
}

/* Advertisement */
.ads {
  display: flex;
  flex-direction: column;
}
.ads-heading {
  padding: 0px 0px;
  margin-bottom: 10px;
}
.ad img {
  width: 80px;
  height: 60px;
  margin-right: 10px;
}
.ad {
  display: flex;
  justify-content: space-around;
  align-items: center;
  margin-bottom: 10px;
}

/* Scroll bar Design */
.scroll-bar {
  height: 90vh;
  overflow: hidden;
}
.scroll-bar:hover {
  overflow-y: auto;
  overflow-x: hidden;
  scroll-behavior: smooth;
}
.scroll-bar::-webkit-scrollbar {
  width: 7px;
}
.scroll-bar::-webkit-scrollbar-track {
  border-radius: 10px;
  box-shadow: inset 0 0 100px var(--primary-dark);
}
.scroll-bar::-webkit-scrollbar-thumb {
  background-color: var(--soft-dark);
  border-radius: 10px;
}

